metrics/grafana/httproute-public/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-public
spec:
  hostnames:
  - grafana.suffix-automatic-replace
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateways
    name: main-public
    sectionName: https-main
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: grafana
      port: 80
      weight: 1
